Fixed devtab
Now it does not go off screen even during 500%

--- a/CSS/WREST-MAIN-CSS.css
+++ b/CSS/WREST-MAIN-CSS.css
@@ -155,7 +155,7 @@ xmp{
     display: block;
     float:right;
     z-index: 2;
-    right: 30vw;
+    right: 20em;
     bottom: 25px;
 }
 
